# tuible

./: .coverage  CHANGELOG.md  README.md  pyproject.toml
src/clitable/: __init__.py  cli.py  colors.py  core.py  params.py  table.py
src/tuible/: params.py  table.py
tests/: test_cli.py  test_colors.py  test_core.py
