[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clitable"
version = "0.1.0"
description = "A Python package for printing formatted CLI tables with ANSI colors"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Frank", email = "frank@domain.com"},
]
keywords = ["cli", "table", "terminal", "colors", "ansi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/frank/clitable"
Repository = "https://github.com/frank/clitable"
Issues = "https://github.com/frank/clitable/issues"
Documentation = "https://github.com/frank/clitable#readme"

[project.scripts]
clitable = "clitable.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clitable"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
